# auto-update-client

./: Cargo.toml
src/: main.rs
