[package]
name = "auto-update-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.16.1", features = ["full"] }
git2 = "0.13.20"
tempdir = "0.3.7"
chrono = "0.4.19"
gh-emoji = "1.0.3"
device_query = "0.2.8"
colored = "2"
terminal_size = "0.1.17"
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }